--- a/devel/double-conversion/Portfile
+++ b/devel/double-conversion/Portfile
@@ -1,11 +1,10 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim: fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           cmake 1.0
+PortGroup           cmake 1.1
 PortGroup           github 1.0
 
-github.setup        google double-conversion 28d0d6b19ae9
-version             1.1.5.99
+github.setup        google double-conversion 3.0.0 v
 categories          devel
 platforms           darwin
 license             BSD
@@ -16,8 +15,9 @@ description         Efficient binary-decimal and decimal-binary conversion \
                     routines for IEEE doubles.
 long_description    ${description}
 
-checksums           rmd160  4be1196beea017be75823b16841384a9f6e71c00 \
-                    sha256  4246c5eb4a1fa15ed551f9188303aac86421464f7b29b434c17ed3d035871e50
+checksums           rmd160  e805aa865faca96574361d76a2c8403d5cecd5c6 \
+                    sha256  41d84dfe8eb0d669d71e1f807ff300e7715916c4d391dcb8eb0809873b601dde \
+                    size    7019582
 
 configure.args-append \
                     -DBUILD_SHARED_LIBS=ON
