--- a/devel/fbthrift/Portfile
+++ b/devel/fbthrift/Portfile
@@ -1,11 +1,11 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim: fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           cxx11 1.1
 PortGroup           cmake 1.1
+PortGroup           cxx11 1.1
 PortGroup           github 1.0
 
-github.setup        facebook fbthrift 2018.05.28.00 v
+github.setup        facebook fbthrift 2018.06.04.00 v
 categories          devel
 platforms           darwin
 license             Apache-2
@@ -15,9 +15,9 @@ maintainers         nomaintainer
 description         Facebook's branch of Apache Thrift, including a new C++ server.
 long_description    ${description}
 
-checksums           rmd160  5971fed91a7799cf542de4df7bd5e29a2303346b \
-                    sha256  78fa2ef3b8bb38c7621943c23f6aedcdec803a1a75635cb0e755199033feb1b6 \
-                    size    3865822
+checksums           rmd160  2af453cf3fd1efe4408b93edd42ecec71796b973 \
+                    sha256  cee50ee12355b74b73fa709f6cd4628317baacc04b40d1f073d510ee5b38e72a \
+                    size    3866165
 
 # doesn't build with libressl as of 2016-09-05
 depends_lib-append  port:boost \
@@ -29,4 +29,7 @@ depends_lib-append  port:boost \
                     path:lib/libssl.dylib:openssl \
                     port:mstch \
                     port:wangle \
-                    port:folly
+                    port:folly \
+                    port:zstd
+
+configure.args      -DBUILD_SHARED_LIBS=ON
