squashme: fbthrift: Use macOS kerberos5

--- a/devel/fbthrift/Portfile
+++ b/devel/fbthrift/Portfile
@@ -35,3 +35,9 @@ depends_lib-append  port:boost \
 patchfiles          DYLD_LIBRARY_PATH.patch
 
 configure.args      -DBUILD_SHARED_LIBS=ON
+
+# fbthrift will fail to build with libcomerr from e2fsprogs, which the kerberos5
+# port pulls in as a dependency.
+# https://github.com/facebook/fbthrift/issues/278
+configure.args-append \
+                    -DKRB5_C_CONFIG=/usr/bin/krb5-config
